# mailer

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  configuration.toml  spec.yaml
.github/workflows/: audit.yml  general.yml
configuration/: base.toml  local.toml  production.toml
scripts/: init_db.sh
src/: configuration.rs  email_client.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs  subscriptions_confirm.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
