[package]
name = "mailer"
version = "0.1.0"
authors = ["Cauã Bernardino <cbernardino@live.com>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "mailer"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
reqwest = "0.11"
